# aether-g4

./: .gitignore  README.md  TAURI_SETUP.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
.github/workflows/: release.yml
Aether.app/Contents/: Info.plist
Aether.app/Contents/Resources/: Aether.icns
Casks/: aether.rb
app/: globals.css  head.tsx  layout.tsx  page.tsx
components/: mini-stats.tsx  phase-chip.tsx  preferences-modal.tsx  stats-view.tsx  timer-controls.tsx  timer-ring.tsx  timer-view.tsx
lib/: use-preferences.ts  use-preferences.tsx  use-sound.ts  use-stats.ts  use-timer.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  timer.rs
tauri-src/: Cargo.toml  tauri.conf.json
tauri-src/src/: main.rs  preferences.rs  timer.rs
